plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.avast.gradle.docker-compose' version '0.17.12'
}

group = 'org.adhuc.library'
version = '1'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

sourceSets {
	acceptance {
		java {
			srcDir file('src/acceptance/java')
		}
	}
}

configurations {
	acceptanceTestCompile.extendsFrom testCompile
	acceptanceTestRuntime.extendsFrom testRuntime
}

dependencyManagement {
	imports {
		mavenBom 'org.springframework.modulith:spring-modulith-bom:1.3.2'
		mavenBom 'org.jmolecules:jmolecules-bom:2023.2.1'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.data:spring-data-rest-webmvc'
	implementation 'org.springframework.modulith:spring-modulith-starter-core'
	implementation 'org.springframework.modulith:spring-modulith-starter-insight'
	implementation 'org.jmolecules:jmolecules-ddd'
	implementation 'org.jmolecules:jmolecules-onion-architecture'
	implementation 'com.atlassian.oai:swagger-request-validator-spring-webmvc:2.44.1'
	implementation('commons-validator:commons-validator:1.9.0') {
		exclude group: 'commons-collections', module: 'commons-collections'
	}

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
	testImplementation 'org.jmolecules.integrations:jmolecules-archunit'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.0'
	testImplementation 'net.jqwik:jqwik:1.9.2'
	testImplementation 'au.com.dius.pact.provider:junit5:4.6.17'

	acceptanceImplementation platform('io.cucumber:cucumber-bom:7.21.1')
	acceptanceImplementation 'io.cucumber:cucumber-java'
	acceptanceImplementation 'io.cucumber:cucumber-junit-platform-engine'
	acceptanceImplementation 'org.junit.platform:junit-platform-suite'
	acceptanceImplementation 'io.rest-assured:rest-assured'
	acceptanceImplementation 'org.assertj:assertj-core'
	acceptanceImplementation 'com.fasterxml.jackson.core:jackson-annotations'
	acceptanceImplementation 'com.fasterxml.jackson.core:jackson-databind'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('--enable-preview')
	options.compilerArgs.add('-parameters')
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
	jvmArgs += '--enable-preview'
	testLogging {
		events "failed", "skipped", "standardError"
		showExceptions true
		showStackTraces true
		exceptionFormat "full"
		showCauses true
		showStandardStreams false
	}
}

task acceptance(type: Test) {
	testClassesDirs = sourceSets.acceptance.output.classesDirs
	classpath = sourceSets.acceptance.runtimeClasspath
	doFirst { dockerCompose.exposeAsSystemProperties(acceptance) }
	// Work around. Gradle does not include enough information to disambiguate
	// between different examples and scenarios.
	systemProperty("cucumber.junit-platform.naming-strategy", "long")
	testLogging {
		showStandardStreams true
	}
}
dockerCompose.isRequiredBy(acceptance)

dockerCompose {
	useComposeFiles = ['docker/docker-compose.yml']
	environment.put 'SERVICES_HOST', '0.0.0.0'
}
